Use integer subtraction to calculate movement_x/y

This CL changes the calculation of movement_x/y from
"floor(cur_pos - last_pos)" to "floor(cur_pos) - floor(last_pos)"

We store mouse event coordinates as pointF,
If we have mouse move like: 0 -> 1.4 -> 2.8 -> 4.2
"floor(cur_pos - last_pos)" will get movement:
0->1.4=1; 1.4->2.8=1; 2.8->4.2=1. in total is 3.
So that'll lose fraction part movement.
To get correct movement_x/y, need to use
"floor(cur_pos) - floor(last_pos)" instead.

Bug: 795179
Change-Id: Iabae78962541cacc9f6a79eb0290a610f1818f02
Reviewed-on: https://chromium-review.googlesource.com/862903
Commit-Queue: Ella Ge <eirage@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529440}
Former-commit-id: 0b0b64bb42e0341bdf30cfe9896821d84bda942a